--- a/index.html
+++ b/index.html
@@ -41,33 +41,32 @@
                 </a>
             </div>
         </div>
-
         <div class="modal" id="comprarModal">
             <div class="modal-content">
                 <h2>Formulario de Compra</h2>
-                <form id="raffleForm">
+                <form id="raffleForm"> 
                     <input type="text" placeholder="Nombre" id="nombre" name="nombre" required />
                     <input type="text" placeholder="Apellido" id="apellido" name="apellido" required />
                     <input type="text" placeholder="Cédula" id="cedula" name="cedula" required pattern="[VEGJPvegjp]{1}-\d{7,8}|\d{7,8}" title="Formato: V-12345678 o 12345678"/>
                     <input type="tel" placeholder="Teléfono" id="telefono" name="telefono" required pattern="\d{10,11}" title="Formato: 04121234567"/>
                     <input type="email" placeholder="Correo" id="correo" name="correo" required />
-
+                    
                     <button type="button" id="selectTicketsBtn" onclick="openTicketSelectionModal()">Seleccionar Tickets</button>
                     <div id="selectedTicketsInfo" style="margin-top: 10px; font-weight: bold; color: #555; text-align: left; width: 100%;">
                         <p>Tickets seleccionados: <span id="displaySelectedTickets">Ninguno</span></p>
                         <p id="montoDisplay">Monto a pagar: Bs. 0</p>
                     </div>
 
-                    <button type="button" id="showPaymentDetailsBtn" class="pay-button">Pagar</button>
-
+                    <button type="button" id="showPaymentDetailsBtn" class="pay-button">Pagar</button> 
+                    
                     <div id="paymentOptionsContainer" style="display: none; width: 100%; text-align: center;">
                         <p style="font-size: 1.1em; font-weight: bold; margin-bottom: 15px; color: #6a0dad;">Selecciona tu método de pago:</p>
 
                         <div class="payment-option-container">
                             <h3>Pago Móvil (Banesco)</h3>
-                            <p><strong>Banco:</strong> <span id="pm1Bank"></span></p>
-                            <p><strong>Cédula:</strong> <span id="pm1Cedula"></span></p>
-                            <p><strong>Teléfono:</strong> <span id="pm1Phone"></span></p>
+                            <p><strong>Banco:</strong> <span id="pm1Bank">Banesco</span></p>
+                            <p><strong>Cédula:</strong> <span id="pm1Cedula">V-12345678</span></p>
+                            <p><strong>Teléfono:</strong> <span id="pm1Phone">0412-1234567</span></p>
                             <p><strong>Monto:</strong> <span id="pm1Monto">Bs. 0</span></p>
                             <button type="button" class="copy-button" onclick="copyPaymentData('pm1')">Copiar Datos Pago Móvil 1</button>
                             <div class="copy-message" id="pm1CopyMessage"></div>
@@ -75,9 +74,9 @@
 
                         <div class="payment-option-container">
                             <h3>Pago Móvil (Banco Venezuela)</h3>
-                            <p><strong>Banco:</strong> <span id="pm2Bank"></span></p>
-                            <p><strong>Cédula:</strong> <span id="pm2Cedula"></span></p>
-                            <p><strong>Teléfono:</strong> <span id="pm2Phone"></span></p>
+                            <p><strong>Banco:</strong> <span id="pm2Bank">Banco de Venezuela</span></p>
+                            <p><strong>Cédula:</strong> <span id="pm2Cedula">V-87654321</span></p>
+                            <p><strong>Teléfono:</strong> <span id="pm2Phone">0424-7654321</span></p>
                             <p><strong>Monto:</strong> <span id="pm2Monto">Bs. 0</span></p>
                             <button type="button" class="copy-button" onclick="copyPaymentData('pm2')">Copiar Datos Pago Móvil 2</button>
                             <div class="copy-message" id="pm2CopyMessage"></div>
@@ -89,7 +88,7 @@
                     <button type="submit" id="submitRaffleFormBtn" style="display: none; margin-top: 10px;">Enviar Registros</button>
                 </form>
 
-                <div id="raffleFormResponseMessage"></div>
+                <div id="raffleFormResponseMessage" style="margin-top: 20px; padding: 10px; border-radius: 5px; font-weight: bold;"></div>
 
                 <button onclick="closeModal('comprarModal')">Cerrar Formulario</button>
             </div>
@@ -98,12 +97,13 @@
         <div class="modal" id="ticketSelectionModal">
             <div class="modal-content">
                 <h2>Selecciona tu número de Ticket</h2>
-                <div id="selectedTicketsDisplayModal">
+                <div id="selectedTicketsDisplayModal" style="margin-bottom: 10px; font-weight: bold; color: #333; text-align: left; width: 100%;">
                     Tickets seleccionados: <span id="currentSelectedTickets">Ninguno</span>
                     <p id="currentTicketsCount">0 tickets</p>
                 </div>
-                <div id="ticketGrid"></div>
-                <p>Mínimo 2 tickets.</p>
+                <div id="ticketGrid">
+                </div>
+                <p style="font-size: 0.9em; color: #777; margin-top: 15px;">Mínimo 2 tickets.</p>
                 <button onclick="confirmTicketSelection()">Confirmar Selección</button>
                 <button onclick="cancelTicketSelection()">Cancelar</button>
             </div>
