--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             text-align: center;
             flex: 1 0 auto;
             transition: background 0.5s ease, color 0.5s ease;
+            padding-top: 40px; /* Add padding to the body to prevent content from being hidden behind the fixed header */
         }
 
         main {
@@ -163,7 +164,7 @@
         }
 
         .modal-content h2 {
-            margin-top: 0;
+            margin-top: 1;
             color: inherit; /* Hereda el color del texto del modal-content */
         }
 
@@ -212,6 +213,10 @@
             height: 40px;
             overflow: hidden;
             transition: background-color 0.5s ease, border-color 0.5s ease;
+            position: fixed; /* Make it fixed */
+            top: 0; /* Position at the top */
+            width: 100%; /* Take full width */
+            z-index: 1000; /* Ensure it stays on top of other content */
         }
 
         .logo {
@@ -427,7 +432,7 @@
             padding: 1.5rem;
             margin-top: 2rem;
             border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
@@ -507,7 +512,7 @@
         </div>
         <div class="modal" id="comprarModal">
             <div class="modal-content">
-                <h2>Formulario de Compra</h2>
+                <h2>Ingrese sus datos para realizar su Compra</h2>
                 <form id="raffleForm"> 
                     <input type="text" placeholder="Nombre" id="nombre" name="nombre" required />
                     <input type="text" placeholder="Apellido" id="apellido" name="apellido" required />
@@ -1038,7 +1043,7 @@ async function obtenerTasaDolar() {
         const result = await enviarDatosAAppsScript(reportData, "ReportesDePago", "POST");
 
         if (result.status === "success") {
-            alert("¡Reporte de pago enviado con éxito! Gracias por su información.");
+            alert("¡Reporte de pago enviado con éxito! En unos instantes validaremos su información.");
             closeModal("reportModal");
             // Limpiar los campos del formulario de reporte
             document.getElementById("cedulaReporte").value = '';
