--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
         &copy; 2025 Gran Rifa Mega Fortuna — Creado por Agencia de Rifas Gran Fortuna
     </footer>
 
-    <script>
+  <script>
     // ** IMPORTANTE: REEMPLAZA ESTA URL CON LA URL DE DESPLIEGUE DE TU APPS SCRIPT (doPost) **
     // Esta es la URL de tu proyecto "WebFormularioDeRifa" en Google Apps Script
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxek62igDKzLfqQWFZ2ty1PV8bRoSm4BW1_UZ_3wYhMXX4cASpZBblqp2d74uWI-mA/exec"; // <-- ¡ACTUALIZA ESTO!
@@ -733,7 +733,9 @@ async function obtenerTasaDolar() {
     function updateSelectedTicketsInfo() {
         const display = document.getElementById('displaySelectedTickets');
         const selectedArr = Array.from(selectedTickets).sort((a, b) => a - b); // Ordenar para mejor visualización
-        display.innerText = selectedArr.length > 0 ? selectedArr.join(', ') : 'Ninguno';
+        // MODIFICACIÓN: Formatear cada número de ticket a 5 dígitos
+        const formattedTickets = selectedArr.map(num => formatTicketNumber(num));
+        display.innerText = formattedTickets.length > 0 ? formattedTickets.join(', ') : 'Ninguno';
         calcularMonto(); // Recalcula el monto cuando cambia la selección
     }
 
@@ -808,6 +810,7 @@ async function obtenerTasaDolar() {
         }
     }
 
+    // MODIFICACIÓN CLAVE: Formatear números de tickets en la cuadrícula
     function renderTicketGrid() {
         const ticketGrid = document.getElementById('ticketGrid');
         ticketGrid.innerHTML = ''; // Limpiar cuadrícula existente
@@ -816,7 +819,8 @@ async function obtenerTasaDolar() {
             const ticketDiv = document.createElement('div');
             ticketDiv.id = `ticket-${i}`;
             ticketDiv.className = 'ticket-item';
-            ticketDiv.innerText = i;
+            // Usa la nueva función para formatear el número de ticket
+            ticketDiv.innerText = formatTicketNumber(i); 
 
             if (soldTickets.has(i)) {
                 ticketDiv.classList.add('sold');
@@ -846,11 +850,14 @@ async function obtenerTasaDolar() {
         updateModalSelectedTicketsDisplay();
     }
 
+    // MODIFICACIÓN CLAVE: Formatear números de tickets en el display del modal de selección
     function updateModalSelectedTicketsDisplay() {
         const display = document.getElementById('currentSelectedTickets');
         const countDisplay = document.getElementById('currentTicketsCount');
         const selectedArr = Array.from(selectedTickets).sort((a, b) => a - b);
-        display.innerText = selectedArr.length > 0 ? selectedArr.join(', ') : 'Ninguno';
+        // Usa la nueva función para formatear cada número de ticket
+        const formattedTickets = selectedArr.map(num => formatTicketNumber(num));
+        display.innerText = formattedTickets.length > 0 ? formattedTickets.join(', ') : 'Ninguno';
         countDisplay.innerText = `${selectedArr.length} ticket(s) seleccionado(s)`;
     }
 
@@ -979,13 +986,16 @@ async function obtenerTasaDolar() {
             const montoBsText = document.getElementById("montoDisplay").innerText;
             const montoBs = parseFloat(montoBsText.replace('Monto a pagar: Bs. ', ''));
 
+            // Antes de enviar, formatea los números de tickets seleccionados a 5 dígitos
+            const formattedSelectedTickets = Array.from(selectedTickets).map(num => formatTicketNumber(num)).join(',');
+
             const purchaseData = {
                 nombre,
                 apellido,
                 cedula,
                 telefono,
                 correo,
-                selectedTickets: Array.from(selectedTickets).join(','), // Enviar los tickets seleccionados como CSV
+                selectedTickets: formattedSelectedTickets, // Enviar los tickets seleccionados como CSV formateados
                 montoBs
             };
 
@@ -1054,6 +1064,11 @@ async function obtenerTasaDolar() {
         } else {
             alert("Error al enviar el reporte de pago: " + result.message);
         }
+    }
+
+    // NUEVA FUNCIÓN: Formatea un número a una cadena de 5 dígitos con ceros iniciales
+    function formatTicketNumber(num) {
+        return String(num).padStart(5, '0');
     }
 
     // Ocultar el loader inicial cuando el DOM esté completamente cargado y obtener la tasa del dólar
